2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/Outbound_Check_List__c.object-meta.xml
<CustomObject>
    <label>Outbound Checklist/Shipping Order</label>
    <nameField>
        <displayFormat>OBC{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Checklist/Shipping Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>