2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Agent_UEN_No__c.field-meta.xml
<CustomField>
    <fullName>Agent_UEN_No__c</fullName>
    <label>Agent UEN No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>