2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/BNE_Amount__c.field-meta.xml
<CustomField>
    <fullName>BNE_Amount__c</fullName>
    <label>Amount</label>
    <type>TextArea</type>
</CustomField>