2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/BNE_Calculation__c.field-meta.xml
<CustomField>
    <fullName>BNE_Calculation__c</fullName>
    <label>Calculation</label>
    <type>TextArea</type>
</CustomField>