2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/BNE_Currency__c.field-meta.xml
<CustomField>
    <fullName>BNE_Currency__c</fullName>
    <label>Currency</label>
    <type>TextArea</type>
</CustomField>