2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Cargo_Release_LocationCN__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Release_LocationCN__c</fullName>
    <label>Cargo Release Location</label>
    <length>45</length>
    <type>Text</type>
</CustomField>