2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Cargo_Release_Stuffing_Location__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Release_Stuffing_Location__c</fullName>
    <label>Cargo Release/Stuffing Location</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>