2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/ChkBy_Date__c.field-meta.xml
<CustomField>
    <fullName>ChkBy_Date__c</fullName>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>