2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Country_of_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Final_Destination__c</fullName>
    <label>Country of Final Destination</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>