2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Crate_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Crate_Dimension__c</fullName>
    <label>Crate Dimension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>