2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <label>Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every single item</fullName>
            </value>
            <value>
                <fullName>General Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>