2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Description_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Goods__c</fullName>
    <label>Description of Goods</label>
    <length>70</length>
    <type>Text</type>
</CustomField>