2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Documents_Attached__c.field-meta.xml
<CustomField>
    <fullName>Documents_Attached__c</fullName>
    <label>Documents Attached</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE</fullName>
            </value>
            <value>
                <fullName>PACKING LIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>