2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <label>ETD</label>
    <required>true</required>
    <type>Date</type>
</CustomField>