2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Exporter_Name__c.field-meta.xml
<CustomField>
    <fullName>Exporter_Name__c</fullName>
    <label>Exporter Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>