2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Exporter_UEN_No__c.field-meta.xml
<CustomField>
    <fullName>Exporter_UEN_No__c</fullName>
    <label>Exporter UEN No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>