2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <label>Flight</label>
    <length>40</length>
    <type>Text</type>
</CustomField>