2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/For_Sea_FCL__c.field-meta.xml
<CustomField>
    <fullName>For_Sea_FCL__c</fullName>
    <label>For Sea - FCL</label>
    <type>TextArea</type>
</CustomField>