2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/HAWB_HBL_No__c.field-meta.xml
<CustomField>
    <fullName>HAWB_HBL_No__c</fullName>
    <label>HAWB/HBL No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>