2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/If_OthersDocAttach__c.field-meta.xml
<CustomField>
    <fullName>If_OthersDocAttach__c</fullName>
    <label>If Others</label>
    <length>40</length>
    <type>Text</type>
</CustomField>