2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/If_Yes_against_II_permit_no__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_against_II_permit_no__c</fullName>
    <description>Note: please ensure that declared value is the same as per II permit.</description>
    <label>If Yes, against II permit no.:</label>
    <length>90</length>
    <type>Text</type>
</CustomField>