2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Mode_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Shipment__c</fullName>
    <label>Mode of Shipment</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
</CustomField>