2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/No_of_items__c.field-meta.xml
<CustomField>
    <fullName>No_of_items__c</fullName>
    <label>No. of Items</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>