2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Other_Cargo_Release_Stuffing_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Cargo_Release_Stuffing_Location__c</fullName>
    <label>Other Cargo Release/Stuffing Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>