2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Outward_Carrier_Agent__c.field-meta.xml
<CustomField>
    <fullName>Outward_Carrier_Agent__c</fullName>
    <label>Outward Carrier Agent</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>