2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <label>Permit Declared By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ben Lim</fullName>
            </value>
            <value>
                <fullName>Kevin Chew</fullName>
            </value>
            <value>
                <fullName>Zolene Chui</fullName>
            </value>
            <value>
                <fullName>Melvin Fong</fullName>
                <isActive>false</isActive>
                <label>Melvin Fong</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>