2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/PExp_Currency__c.field-meta.xml
<CustomField>
    <fullName>PExp_Currency__c</fullName>
    <label>Declared Value: Currency</label>
    <type>TextArea</type>
</CustomField>