2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Place_Port_of_Discharge_Next_Port__c.field-meta.xml
<CustomField>
    <fullName>Place_Port_of_Discharge_Next_Port__c</fullName>
    <label>Place/Port of Discharge/Next Port</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>