2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <defaultValue>$User.FirstName+&quot; &quot;+ $User.LastName</defaultValue>
    <label>Prepared By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>