2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Purpose_of_Export__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Export__c</fullName>
    <label>Purpose of Export</label>
    <length>40</length>
    <type>Text</type>
</CustomField>