2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/TempExp_Notes__c.field-meta.xml
<CustomField>
    <fullName>TempExp_Notes__c</fullName>
    <defaultValue>&quot;Please ensure that declared value is the same as per II permit.&quot;</defaultValue>
    <label>Note:</label>
    <length>65</length>
    <type>Text</type>
</CustomField>