2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/TempExp_Re_Export__c.field-meta.xml
<CustomField>
    <fullName>TempExp_Re_Export__c</fullName>
    <label>Re-Export</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>