2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Terminal_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Terminal_If_Others__c</fullName>
    <label>If Others (Terminal)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>