2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/TerminalCN__c.field-meta.xml
<CustomField>
    <fullName>TerminalCN__c</fullName>
    <label>Terminal</label>
    <length>45</length>
    <type>Text</type>
</CustomField>