2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Traders_Remark__c.field-meta.xml
<CustomField>
    <fullName>Traders_Remark__c</fullName>
    <label>Traders Remark</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>