2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Type_of_Permit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Permit__c</fullName>
    <label>Type of Permit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATA Carnet</fullName>
            </value>
            <value>
                <fullName>OD - Offset IM (Export from same FTZ)</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
                <label>OD - Permanent</label>
            </value>
            <value>
                <fullName>OO - TCI  (Temporary Export/Re-imported goods, Fresh OO)</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under APS</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under TCE, MUSUEM</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under TCO, MUSUEM</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under TCS, MUSUEM</fullName>
            </value>
            <value>
                <fullName>Temp - OFFSET - RM PERMIT</fullName>
                <label>OO - Offset RM with Export Details</label>
            </value>
            <value>
                <fullName>OT -  Offset IM (Export from different FTZ)</fullName>
            </value>
            <value>
                <fullName>OU - Offset II &amp; RM without Export Details</fullName>
            </value>
            <value>
                <fullName>RM - Removal (Offset II/RM)</fullName>
            </value>
            <value>
                <fullName>Export under LU (Not Applicable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>