2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/fields/Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Valid_Till__c</fullName>
    <label>Valid Till</label>
    <type>Date</type>
</CustomField>