2nd training/Community/Community/Community1/force-app/main/default/objects/Outbound_Check_List__c/recordTypes/HTTR.recordType-meta.xml
<RecordType>
    <fullName>HTTR</fullName>
    <active>true</active>
    <label>HTTR</label>
</RecordType>